--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint ."
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -43,7 +42,6 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.2.7",
-    "eslint": "^9.0.0"
+    "tailwindcss": "^3.2.7"
   }
 }
