--- a/k8s-manifests/deployment.yml
+++ b/k8s-manifests/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: amazon-clone-app
-        image: containerizeops/amazon-clone:replaceImageTag
+        image: containerizeops/amazon-clone:31
         ports:
         - containerPort: 3000
