--- a/k8s-manifests/service.yml
+++ b/k8s-manifests/service.yml
@@ -4,7 +4,7 @@ metadata:
   name: amazon-clone-app-service
   namespace: dev
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
   - name: http
     port: 80
